fixed spacing on meeting planners page

--- a/css/main.css
+++ b/css/main.css
@@ -1308,6 +1308,17 @@ margin-right: 50px;
     margin: 30px auto;
     width: 50%;
   }
+ 
+    .jessbiotext a {
+     width: 50%;
+    }
+
+    .twopagerimgs img {
+     display: block;
+     margin: 0 auto;
+     width: 80%;
+     margin-bottom: 20px;
+    }
 }
 /* ================================================================
       LAPTOP MEDIA QUERY
@@ -1561,6 +1572,9 @@ margin-right: 50px;
     line-height: 1.75;
   }
 
+  /*--------------------
+  MEETING PLANNERS PAGE
+  ----------------------*/
     .mtgplannerspage h1 {
      font-size: 20px;
     }
@@ -1571,7 +1585,6 @@ margin-right: 50px;
     }
   
     .jessbiocontainer {
-     /* background-color: #f7f7f7; */
      padding: 30px 0;
     }
   
@@ -1579,50 +1592,51 @@ margin-right: 50px;
     .twopagerdiv {
      color: #000;
      display: flex;
+     justify-content: space-around;
      align-items: flex-start;
      margin: 50px auto;
-    }
-  
-    .jessbio {
-     width: 60%;
+     width: 70%;
     }
   
     .jessbio img {
-     margin-right: 150px;
+     margin-right: 100px;
     }
   
     .jessbiotext {
      align-self: flex-start;
+     width: 60%;
     }
 
-        .jessbiotext a {
-         display: inline;
-         text-align: center;
-        
-        }
+    .jessbioimgdiv {
+     width: 40%;
+    }
+
+   .jessbiotext a {
+    display: inline;
+    text-align: center;
+   }
   
     .jessbiop3 {
      margin-bottom: 40px;
     }
   
-    .twopagerdiv {
-     width: 80%;
-    }
-  
     .twopagerimgs {
      display: flex;
      flex-direction: column;
-     width: 40%;
+     width: 35%;
      margin: 0;
+     margin-right: 100px;
     }
   
     .flexdiv2 {
-     width: 50%;
+     width: 65%;
+     align-self: flex-start;
+     margin: 0 auto;
     }
   
     .twopagerimgs img {
      margin-bottom: 20px;
-     width: 500px;
+     width: 300px;
     }
   
     a.downloadbtn {
